feat(export): enhance ZIP export functionality and validation for project metadata